cabal-version:      3.0
name:               aztecs-testing
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Glen Sargent
maintainer:         glensarg@hotmail.co.uk
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aztecs-testing
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
